--- a/JogoTecProg2023.vcxproj.filters
+++ b/JogoTecProg2023.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Principal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Jogador.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Principal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Jogador.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
