--- a/JogoTecProg2023.vcxproj
+++ b/JogoTecProg2023.vcxproj
@@ -156,6 +156,8 @@
   <ItemGroup>
     <ClCompile Include="source\Animador\Animacao.cpp" />
     <ClCompile Include="source\Animador\Imagem.cpp" />
+    <ClCompile Include="source\Construtor\ConstrutorEstado.cpp" />
+    <ClCompile Include="source\Construtor\ConstrutorFase.cpp" />
     <ClCompile Include="source\Ente.cpp" />
     <ClCompile Include="source\Entidade\Entidade.cpp" />
     <ClCompile Include="source\Entidade\Obstaculo\Caixa\Caixa.cpp" />
@@ -170,11 +172,11 @@
     <ClCompile Include="source\Entidade\Personagem\Personagem.cpp" />
     <ClCompile Include="source\Estado\Estado.cpp" />
     <ClCompile Include="source\Estado\EstadoJogar.cpp" />
-    <ClCompile Include="source\Estado\MaquinaEstado.cpp" />
     <ClCompile Include="source\Fase\Fase.cpp" />
     <ClCompile Include="source\Fase\FlorestaBranca.cpp" />
     <ClCompile Include="source\Fase\FlorestaVermelha.cpp" />
     <ClCompile Include="source\Gerenciador\GerenciadorColisao.cpp" />
+    <ClCompile Include="source\Gerenciador\GerenciadorEstado.cpp" />
     <ClCompile Include="source\Gerenciador\GerenciadorEvento.cpp" />
     <ClCompile Include="source\Gerenciador\GerenciadorGrafico.cpp" />
     <ClCompile Include="source\Lista\ListaEntidade.cpp" />
@@ -186,6 +188,8 @@
   <ItemGroup>
     <ClInclude Include="header\Animador\Animacao.h" />
     <ClInclude Include="header\Animador\Imagem.h" />
+    <ClInclude Include="header\Construtor\ConstrutorEstado.h" />
+    <ClInclude Include="header\Construtor\ConstrutorFase.h" />
     <ClInclude Include="header\Ente.h" />
     <ClInclude Include="header\Entidade\Entidade.h" />
     <ClInclude Include="header\Entidade\Obstaculo\Caixa\Caixa.h" />
@@ -200,11 +204,11 @@
     <ClInclude Include="header\Entidade\Personagem\Personagem.h" />
     <ClInclude Include="header\Estado\Estado.h" />
     <ClInclude Include="header\Estado\EstadoJogar.h" />
-    <ClInclude Include="header\Estado\MaquinaEstado.h" />
     <ClInclude Include="header\Fase\Fase.h" />
     <ClInclude Include="header\Fase\FlorestaBranca.h" />
     <ClInclude Include="header\Fase\FlorestaVermelha.h" />
     <ClInclude Include="header\Gerenciador\GerenciadorColisao.h" />
+    <ClInclude Include="header\Gerenciador\GerenciadorEstado.h" />
     <ClInclude Include="header\Gerenciador\GerenciadorEvento.h" />
     <ClInclude Include="header\Gerenciador\GerenciadorGrafico.h" />
     <ClInclude Include="header\IDs.h" />
