--- a/JogoTecProg2023.vcxproj
+++ b/JogoTecProg2023.vcxproj
@@ -173,6 +173,8 @@
     <ClCompile Include="source\Entidade\Personagem\Personagem.cpp" />
     <ClCompile Include="source\Estado\Estado.cpp" />
     <ClCompile Include="source\Estado\EstadoJogar.cpp" />
+    <ClCompile Include="source\Estado\EstadoMenuOpcaoPrincipal.cpp" />
+    <ClCompile Include="source\Estado\EstadoMenuPausa.cpp" />
     <ClCompile Include="source\Estado\EstadoMenuPrincipal.cpp" />
     <ClCompile Include="source\Fase\Fase.cpp" />
     <ClCompile Include="source\Fase\FlorestaBranca.cpp" />
@@ -188,9 +190,15 @@
     <ClCompile Include="source\Menu\Botao\Texto.cpp" />
     <ClCompile Include="source\Menu\Botao\TextoAnimado.cpp" />
     <ClCompile Include="source\Menu\Menu.cpp" />
+    <ClCompile Include="source\Menu\MenuOpcao.cpp" />
+    <ClCompile Include="source\Menu\MenuOpcaoPrincipal.cpp" />
+    <ClCompile Include="source\Menu\MenuPausa.cpp" />
     <ClCompile Include="source\Menu\MenuPrincipal.cpp" />
     <ClCompile Include="source\Observador\Observador.cpp" />
+    <ClCompile Include="source\Observador\ObservadorFase.cpp" />
     <ClCompile Include="source\Observador\ObservadorJogador.cpp" />
+    <ClCompile Include="source\Observador\ObservadorMenuOpcao.cpp" />
+    <ClCompile Include="source\Observador\ObservadorMenuPausa.cpp" />
     <ClCompile Include="source\Observador\ObservadorMenuPrincipal.cpp" />
     <ClCompile Include="source\Parallax\Camada.cpp" />
     <ClCompile Include="source\Parallax\Fundo.cpp" />
@@ -216,6 +224,8 @@
     <ClInclude Include="header\Entidade\Personagem\Personagem.h" />
     <ClInclude Include="header\Estado\Estado.h" />
     <ClInclude Include="header\Estado\EstadoJogar.h" />
+    <ClInclude Include="header\Estado\EstadoMenuOpcaoPrincipal.h" />
+    <ClInclude Include="header\Estado\EstadoMenuPausa.h" />
     <ClInclude Include="header\Estado\EstadoMenuPrincipal.h" />
     <ClInclude Include="header\Fase\Fase.h" />
     <ClInclude Include="header\Fase\FlorestaBranca.h" />
@@ -233,9 +243,15 @@
     <ClInclude Include="header\Menu\Botao\Texto.h" />
     <ClInclude Include="header\Menu\Botao\TextoAnimado.h" />
     <ClInclude Include="header\Menu\Menu.h" />
+    <ClInclude Include="header\Menu\MenuOpcao.h" />
+    <ClInclude Include="header\Menu\MenuOpcaoPrincipal.h" />
+    <ClInclude Include="header\Menu\MenuPausa.h" />
     <ClInclude Include="header\Menu\MenuPrincipal.h" />
     <ClInclude Include="header\Observador\Observador.h" />
+    <ClInclude Include="header\Observador\ObservadorFase.h" />
     <ClInclude Include="header\Observador\ObservadorJogador.h" />
+    <ClInclude Include="header\Observador\ObservadorMenuOpcao.h" />
+    <ClInclude Include="header\Observador\ObservadorMenuPausa.h" />
     <ClInclude Include="header\Observador\ObservadorMenuPrincipal.h" />
     <ClInclude Include="header\Parallax\Camada.h" />
     <ClInclude Include="header\Parallax\Fundo.h" />
